--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@ img {
   height: 100%;
   object-fit: cover;
 }
+
+body {
+    margin: 0;
+    background-image: url('./golden_rod.jpg');
+    background-size: cover;
+    background-position: center;
+}
